--- a/app/src/main/resources/templates/calevents.html
+++ b/app/src/main/resources/templates/calevents.html
@@ -8,47 +8,47 @@
     <link rel="icon" th:href="@{/icons/clipboard-regular.svg}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <style>
-        .pad {
-            padding-top: 10px !important;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container h-100">
         <div class="row align-items-center h-100">
             <div class="d-flex flex-column">
-                <div class="p-2 text-center">
-                    <h5 class="display-5" th:text="${location.title}"></h5>
-                </div>
-                <div class="p-2 text-center" th:switch="${eventRunning == null}">
-                    <h2 th:case="true" class="alert alert-success">Room is available right now</h2>
-                    <h2 th:case="false" class="alert alert-danger">Reserved until [(${eventRunning.endDateTimeStr})]</h2>
-                </div>
+                <div th:each="locationInfo, iter: ${allLocationInfos}">
+                    <div th:if="${iter.index != 0}" style="padding: 20px;">
+                        <hr style="width: 50%; margin: auto;">
+                    </div>
+                    
+                    <div class="p-2 text-center">
+                        <h5 class="display-5" th:text="${locationInfo.location.title}"></h5>
+                    </div>
+                    <div class="p-2 text-center" th:switch="${locationInfo.runningEvent == null}">
+                        <h2 th:case="true" class="alert alert-success">Room is available right now</h2>
+                        <h2 th:case="false" class="alert alert-danger">Reserved until [(${locationInfo.runningEvent.endDateTimeStr})]</h2>
+                    </div>
 
-                <div class="p-2">
-                    <h4 class="text-center" th:if="${not #lists.isEmpty(eventsToday)}">Upcoming reservations</h4>
-                    <div class="text-center" th:if="${#lists.isEmpty(eventsToday)}">No more scheduled events
-                        today.</div>
+                    <div class="p-2">
+                        <h4 class="text-center" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}">Upcoming reservations</h4>
+                        <div class="text-center" th:if="${#lists.isEmpty(locationInfo.upcomingEvents)}">No more scheduled events
+                            today.</div>
 
-                    <div class="row justify-content-md-center">
-                        <div class="col-md-6">
-                            <table class="table" th:if="${not #lists.isEmpty(eventsToday)}">
-                                <tbody>
-                                    <thead>
-                                        <th class="text-center">Starts at</th>
-                                        <th class="text-center">Ends at</th>
-                                    </thead>
-                                <tbody>
-                                    <tr th:each="event: ${eventsToday}">
-                                        <td th:text="${event.startDateTimeStr}" class="text-center"></td>
-                                        <td th:text="${event.endDateTimeStr}" class="text-center"></td>
-                                    </tr>
-                                </tbody>
-                                </tbody>
-                            </table>
+                        <div class="row justify-content-md-center">
+                            <div class="col-md-6">
+                                <table class="table" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}">
+                                    <tbody>
+                                        <thead>
+                                            <th class="text-center">Starts at</th>
+                                            <th class="text-center">Ends at</th>
+                                        </thead>
+                                    <tbody>
+                                        <tr th:each="event: ${locationInfo.upcomingEvents}">
+                                            <td th:text="${event.startDateTimeStr}" class="text-center"></td>
+                                            <td th:text="${event.endDateTimeStr}" class="text-center"></td>
+                                        </tr>
+                                    </tbody>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
