--- a/app/src/main/resources/templates/calevents.html
+++ b/app/src/main/resources/templates/calevents.html
@@ -18,18 +18,21 @@
                     <div th:if="${iter.index != 0}" style="padding: 20px;">
                         <hr style="width: 50%; margin: auto;">
                     </div>
-                    
+
                     <div class="p-2 text-center">
                         <h5 class="display-5" th:text="${locationInfo.location.title}"></h5>
                     </div>
                     <div class="p-2 text-center" th:switch="${locationInfo.runningEvent == null}">
                         <h2 th:case="true" class="alert alert-success">Room is available right now</h2>
-                        <h2 th:case="false" class="alert alert-danger">Reserved until [(${locationInfo.runningEvent.endDateTimeStr})]</h2>
+                        <h2 th:case="false" class="alert alert-danger">Reserved until
+                            [(${locationInfo.runningEvent.endDateTimeStr})]</h2>
                     </div>
 
                     <div class="p-2">
-                        <h4 class="text-center" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}">Upcoming reservations</h4>
-                        <div class="text-center" th:if="${#lists.isEmpty(locationInfo.upcomingEvents)}">No more scheduled events
+                        <h4 class="text-center" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}"> Upcoming
+                            reservations</h4>
+                        <div class="text-center" th:if="${#lists.isEmpty(locationInfo.upcomingEvents)}">No more
+                            scheduled events
                             today.</div>
 
                         <div class="row justify-content-md-center">
@@ -51,13 +54,21 @@
                             </div>
                         </div>
                     </div>
+                    <div th:if="${locationInfo.location.qrCodeURI}">
+                        <div class="row justify-content-center mt-2">
+                            <div class="col-3">
+                                <img class="img-fluid" th:src="${locationInfo.location.qrCodeURI}"
+                                    aria-label="QR code pointing towards ${locationInfo.location.qrCodeURI}">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <script type="text/javascript">
-        window.setTimeout(function() {
+        window.setTimeout(function () {
             window.location.reload();
         }, 60000);
     </script>
