--- a/app/src/main/resources/templates/calevents.html
+++ b/app/src/main/resources/templates/calevents.html
@@ -22,43 +22,50 @@
                     <div class="p-2 text-center">
                         <h5 class="display-5" th:text="${locationInfo.location.title}"></h5>
                     </div>
-                    <div class="p-2 text-center" th:switch="${locationInfo.runningEvent == null}">
-                        <h2 th:case="true" class="alert alert-success">Room is available right now</h2>
-                        <h2 th:case="false" class="alert alert-danger">Reserved until
-                            [(${locationInfo.runningEvent.endDateTimeStr})]</h2>
-                    </div>
 
-                    <div class="p-2">
-                        <h4 class="text-center" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}"> Upcoming
-                            reservations</h4>
-                        <div class="text-center" th:if="${#lists.isEmpty(locationInfo.upcomingEvents)}">No more
-                            scheduled events
-                            today.</div>
+                    <div class="row">
+                        <div th:class="${locationInfo.location.qrCodeURI != null ? 'col-9' : 'col-12'}">
+                            <div class="p-2 text-center" th:switch="${locationInfo.runningEvent == null}">
+                                <h2 th:case="true" class="alert alert-success">Room is available right now</h2>
+                                <h2 th:case="false" class="alert alert-danger">Reserved until
+                                    [(${locationInfo.runningEvent.endDateTimeStr})]</h2>
+                            </div>
 
-                        <div class="row justify-content-md-center">
-                            <div class="col-md-6">
-                                <table class="table" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}">
-                                    <tbody>
-                                        <thead>
-                                            <th class="text-center">Starts at</th>
-                                            <th class="text-center">Ends at</th>
-                                        </thead>
-                                    <tbody>
-                                        <tr th:each="event: ${locationInfo.upcomingEvents}">
-                                            <td th:text="${event.startDateTimeStr}" class="text-center"></td>
-                                            <td th:text="${event.endDateTimeStr}" class="text-center"></td>
-                                        </tr>
-                                    </tbody>
-                                    </tbody>
-                                </table>
+                            <div class="p-2">
+                                <h4 class="text-center" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}">
+                                    Upcoming reservations</h4>
+                                <div class="text-center" th:if="${#lists.isEmpty(locationInfo.upcomingEvents)}">No more
+                                    scheduled events
+                                    today.</div>
+
+                                <div class="row justify-content-md-center">
+                                    <div class="col-md-6">
+                                        <table class="table" th:if="${not #lists.isEmpty(locationInfo.upcomingEvents)}">
+                                            <tbody>
+                                                <thead>
+                                                    <th class="text-center">Starts at</th>
+                                                    <th class="text-center">Ends at</th>
+                                                </thead>
+                                            <tbody>
+                                                <tr th:each="event: ${locationInfo.upcomingEvents}">
+                                                    <td th:text="${event.startDateTimeStr}" class="text-center"></td>
+                                                    <td th:text="${event.endDateTimeStr}" class="text-center"></td>
+                                                </tr>
+                                            </tbody>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div th:if="${locationInfo.location.qrCodeURI}">
-                        <div class="row justify-content-center mt-2">
-                            <div class="col-3">
-                                <img class="img-fluid" th:src="${locationInfo.location.qrCodeURI}"
-                                    aria-label="QR code pointing towards ${locationInfo.location.qrCodeURI}">
+                        <div class="col-3">
+                            <div th:if="${locationInfo.location.qrCodeURI}">
+                                <div class="row justify-content-center">
+                                    <div class="col-12">
+                                        <img class="img-fluid" th:src="${locationInfo.location.qrCodeURI}"
+                                            aria-label="QR code pointing towards ${locationInfo.location.qrCodeURI}">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
