Changed text to  for highest library occupancy

--- a/app/src/main/resources/templates/wifi.html
+++ b/app/src/main/resources/templates/wifi.html
@@ -250,7 +250,7 @@
                     datalabels: {
                         formatter: (val, ctx) => {
                             if (ctx.datasetIndex === 0) {
-                                let label = "As busy as it gets";
+                                let label = "Very busy";
 
                                 if (val.ratio < 0.76) label = "Busy";
                                 if (val.ratio < 0.51) label = "A little busy";
