--- a/app/src/main/resources/templates/wifi.html
+++ b/app/src/main/resources/templates/wifi.html
@@ -38,22 +38,20 @@
         <div class="row align-items-center h-100">
             <div class="container">
                 <div class="row mt-3">
-                    <div class="col-lg-4">
+                    <div class="col-lg-2">
                         <img width="200px" th:src="@{/icons/brocku-lib-logo.png}"
                             aria-label="Brock University Library logo" />
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-7 text-center">
+                    <div class="col-lg-4 align-self-center">
                         <h4>Current Library Occupancy</h4>
                     </div>
                 </div>
                 <div class="row justify-content-between">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <canvas id="chart" height="600"
                             aria-label="A chart with information on how busy each floor and subsection of the library is. Right now "></canvas>
                     </div>
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <div class="row mt-3">
                             <div class="text-center">
                                 <h4>Check how busy we are from anywhere on campus!</h4>
@@ -74,17 +72,7 @@
                                 </h6>
                             </div>
                         </div>
-                        <!-- <div class="row mt-3">
-                            <div class="col-2">
-                                <button class="btn btn-danger d-block noise-card">
-                                    <img width="40px" th:src="@{/icons/volume-xmark-solid.svg}"/>
-                                </button>
-                            </div>
-                            <div class="col">
-                                Silent Study Zones : Floors 5 (Silent Room), 9, 10 & Classroom B (Main Floor)
-                            </div>
-                        </div> -->
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -137,8 +125,8 @@
                 }
 
                 let ratio = e["Count"] / maxMap[e["Floor"]];
-                ratio = (ratio < 0.12) ? 0.12 : ratio;
-                ratio = (ratio > 0.98) ? 0.98 : ratio;
+                ratio = (ratio < 0.09) ? 0.09 : ratio;
+                ratio = (ratio > 0.96) ? 0.96 : ratio;
 
                 return {
                     "y": label,
@@ -250,11 +238,20 @@
                     datalabels: {
                         formatter: (val, ctx) => {
                             if (ctx.datasetIndex === 0) {
-                                let label = "Very busy";
+                                capacityPercentage = Math.round(val.ratio * 100);
+                                capacityPercentageText = ", at " + capacityPercentage + "% capacity";
 
-                                if (val.ratio < 0.76) label = "Busy";
-                                if (val.ratio < 0.51) label = "A little busy";
-                                if (val.ratio < 0.25) label = "Not busy";
+                                if (capacityPercentage == 9) {
+                                    capacityPercentageText = ", at less than 10% capacity";
+                                } else if (capacityPercentage === 96) {
+                                    capacityPercentageText = ", at greater than 95% capacity";
+                                }
+
+                                let label = "Very busy" + capacityPercentageText;
+
+                                if (val.ratio < 0.76) label = "Busy" + capacityPercentageText;
+                                if (val.ratio < 0.51) label = "A little busy" + capacityPercentageText;
+                                if (val.ratio < 0.25) label = "Not busy" + capacityPercentageText;
 
                                 document.getElementById("chart").ariaLabel = document.getElementById("chart").ariaLabel + (val["y"] + " is " + label + ". ");
 
