--- a/app/src/main/resources/templates/wifi.html
+++ b/app/src/main/resources/templates/wifi.html
@@ -39,16 +39,18 @@
         <div class="row align-items-center vh-100">
             <div class="container">
                 <div class="row mt-3">
+                    <div class="col-lg-10 align-self-center">
+                        <h1>Find your spot in the Library</h1>
+                    </div>
                     <div class="col-lg-2">
                         <img width="200px" th:src="@{/icons/brocku-lib-logo.png}"
                             aria-label="Brock University Library logo" />
                     </div>
-                    <div class="col-lg-4 align-self-center">
-                        <h4>Current Library Occupancy</h4>
-                    </div>
                 </div>
                 <div class="row">
-                    <h5 id="countText" style="padding-top: 30px;"></h5>
+                    <div class="col-lg-12">
+                        <h3 id="countText" class="text-right"></h3>
+                    </div>
                 </div>
                 <div class="row justify-content-between">
                     <div class="col-lg-12">
@@ -117,7 +119,8 @@
                 return (currentHour < 11) ? (count / 1.7) : (count / 2.0);
             }).reduce((sum, num) => sum + num, 0);
         
-        document.getElementById("countText").textContent = "Approximately " + Math.round(patronCount) + " patrons in James A. Gibson Library.";
+        // document.getElementById("countText").textContent = "Approximately " + Math.round(patronCount) + " patrons in James A. Gibson Library";
+        document.getElementById("countText").textContent = "Right now, there are approximately " + Math.round(patronCount) + " people in the Library";
 
         let dataMapped = jsonData.filter(e => (e["Floor"] != 3) && (e["Floor"] != 4) && (e["Floor"] != 11))
             .sort((o1, o2) => o2["Floor"] - o1["Floor"])
@@ -256,23 +259,25 @@
                         formatter: (val, ctx) => {
                             if (ctx.datasetIndex === 1) {
                                 capacityPercentage = Math.round(val.ratio * 100);
-                                capacityPercentageText = ", at " + capacityPercentage + "% capacity";
+                                capacityPercentageText = capacityPercentage + "%";
+                                
+                                // if (capacityPercentage == 9) {
+                                //     capacityPercentageText = ", at less than 10% capacity";
+                                // } else if (capacityPercentage === 96) {
+                                //     capacityPercentageText = ", at greater than 95% capacity";
+                                // }
 
-                                if (capacityPercentage == 9) {
-                                    capacityPercentageText = ", at less than 10% capacity";
-                                } else if (capacityPercentage === 96) {
-                                    capacityPercentageText = ", at greater than 95% capacity";
-                                }
+                                // let label = "Very busy" + capacityPercentageText;
 
-                                let label = "Very busy" + capacityPercentageText;
+                                // if (val.ratio < 0.76) label = "Busy" + capacityPercentageText;
+                                // if (val.ratio < 0.51) label = "A little busy" + capacityPercentageText;
+                                // if (val.ratio < 0.25) label = "Not busy" + capacityPercentageText;
 
-                                if (val.ratio < 0.76) label = "Busy" + capacityPercentageText;
-                                if (val.ratio < 0.51) label = "A little busy" + capacityPercentageText;
-                                if (val.ratio < 0.25) label = "Not busy" + capacityPercentageText;
+                                let label = capacityPercentageText;
 
                                 document.getElementById("chart").ariaLabel = document.getElementById("chart").ariaLabel + (val["y"] + " is " + label + ". ");
 
-                                return label;
+                                return capacityPercentageText;
                             }
 
                             return "";
@@ -322,7 +327,7 @@
                         ticks: {
                             color: "rgb(0,0,0)",
                             font: {
-                                size: 17,
+                                size: 18,
                                 family: "Circular"
                             }
                         }
